add more sockets, v0-stuff

--- a/nous-socket-1.yaml
+++ b/nous-socket-1.yaml
@@ -1,11 +1,8 @@
 substitutions:
-  current_res: "0.00280"
-  voltage_div: "648"
-  devicename: "nous_socket_1"
-  dn: "NS1"
+  devicename: "v0_power"
 
 esphome:
-  name: "nous-socket-1"
+  name: "v0-power"
 
 esp8266:
   board: esp8285
@@ -14,24 +11,8 @@ esp8266:
 preferences:
   flash_write_interval: 5min
 
-globals:
-   - id: blink_led
-     type: bool
-     restore_value: no 
-     initial_value: "false"
-
-interval:
-  - interval: 0.5s
-    then:
-      - if:
-          condition:
-            # Only blink if blink_led==true
-            lambda: 'return id(blink_led);'
-          then:
-            - switch.toggle: led_red
-            - light.toggle: led_blue
-
 logger:
+  # Disable usb/uart logging
   baud_rate: 0
 
 api:
@@ -43,9 +24,10 @@ ota:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_pw
+  domain: .intern.hild1.no
 
   ap:
-    ssid: "${devicename} Fallback Hotspot"
+    ssid: "${devicename}-AP"
     password: !secret wifi_backup_pw
 
 web_server:
@@ -57,76 +39,40 @@ time:
   - platform: homeassistant
     id: homeassistant_time
 
-text_sensor:
-  - platform: version
-    name: "${dn} - Version"
-    icon: mdi:cube-outline
-  - platform: wifi_info
-    ip_address:
-      name: "${dn} IP Address"
-
 binary_sensor:
   - platform: gpio
     pin:
       number: GPIO13
       mode: INPUT_PULLUP
       inverted: True
-    id: "${dn}_button"
+    id: "${devicename}_button"
     on_press:
       - switch.toggle: button_switch
 
-sensor:
-  - platform: hlw8012
-    sel_pin:
-      number: GPIO12
-      inverted: True
-    cf_pin: GPIO05
-    cf1_pin: GPIO04
-    change_mode_every: 4
-    current_resistor: ${current_res}
-    voltage_divider: ${voltage_div}
-    update_interval: 120s
-
-    current:
-      name: "${dn} - Ampere"
-      unit_of_measurement: A
-      accuracy_decimals: 3
-      icon: mdi:current-ac
-
-    voltage:
-      name: "${dn} - Volt"
-      unit_of_measurement: V
-      accuracy_decimals: 1
-      icon: mdi:flash-outline
-
-    power:
-      name: "${dn} - Watt"
-      unit_of_measurement: W
-      id: "power_wattage"
-      icon: mdi:gauge
-
-light:
-  - platform: status_led
-    name: "Switch state"
-    internal: true
-    pin: 
-      number: GPIO02
-      inverted: true
-    id: led_blue
-    restore_mode: ALWAYS_OFF
-
-switch:
+output:
   - platform: gpio
-    id: led_red
-    name: "Red led"
-    internal: true
+    id: led_red_io
     pin: 
       number: GPIO00
       inverted: true
+
+light:
+  - platform: status_led
+    id: led_blue
+    internal: true
+    restore_mode: ALWAYS_OFF
+    pin: 
+      number: GPIO02
+      inverted: true
+  - platform: binary
+    id: led_red
+    output: led_red_io
+    internal: true
     restore_mode: ALWAYS_OFF
 
+switch:
   - platform: template
-    name: "${dn} - Switch"
+    name: "${devicename}_relay"
     icon: mdi:power
     optimistic: true
     restore_mode: ALWAYS_OFF
@@ -134,35 +80,12 @@ switch:
     id: button_switch
     turn_on_action:
       - switch.turn_on: relay
-      - switch.turn_on: led_red
+      - light.turn_on: led_red
     turn_off_action:
       - switch.turn_off: relay
-      - switch.turn_off: led_red
+      - light.turn_off: led_red
 
   - platform: gpio
     pin: GPIO15
     id: relay
     restore_mode: ALWAYS_OFF
-
-  - platform: template
-    name: 'poweroff_60s'
-    internal: true
-    restore_mode: ALWAYS_OFF
-    turn_on_action:
-      - if:
-          condition:
-            # Only activate if relay on
-            lambda: 'return id(relay).state;'
-          then:
-            - switch.turn_on: led_red
-            - light.turn_off: led_blue
-            - globals.set:
-                id: blink_led
-                value: 'true'
-            - delay: 59s
-            - globals.set:
-                id: blink_led
-                value: 'false'
-            - switch.turn_off: button_switch
-          else:
-            - logger.log: "Ignoring poweroff_60s.turn_on, relay is already off"
